# PINNDev

./: .gitignore  README.md  config.example.yaml  pyproject.toml  test_suite.md
.claude/plan/: pinn-multiagent-system.md
pinnsystem/: __init__.py  __main__.py  config.py  state.py
pinnsystem/agents/: __init__.py  base.py  coding.py  feedback.py  parser.py  research.py  router.py
pinnsystem/agents/prompts/: coding.md  feedback.md  parser.md  research.md
pinnsystem/execution/: __init__.py  venv_runner.py  workdir.py
pinnsystem/graph/: __init__.py  builder.py  routing.py
pinnsystem/gui/: __init__.py  app.py  bridge.py  components.py  sessions.py
pinnsystem/knowledge/: __init__.py  arch_knowledge.py  history.py
pinnsystem/llm/: __init__.py  llamacpp.py
pinnsystem/mcp/: __init__.py  client.py  compute_server.py  pinn_server.py  research_server.py
pinnsystem/pinn/: __init__.py  architectures.py  evaluate.py  interfaces.py  losses.py  problems.py  solvers.py  train.py
pinnsystem/tools/: __init__.py  pinn_ops.py  search.py  symbolic.py
tests/: test_agents.py  test_end_to_end_smoke.py  test_execution.py  test_graph_end_to_end.py  test_graph_routing.py  test_gui_bridge.py  test_history.py  test_knowledge.py  test_mcp.py  test_router.py  test_sessions.py  test_solvers.py  test_state.py  test_tools.py
